# imguiplot-app

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: clang-format-check.yml  clang-tidy-check.yml  macos.yml  ubuntu.yml  windows.yml
examples/: CMakeLists.txt  demo.cpp  glfw_demo.cpp  sdl_demo.cpp
misc/: default.nix
misc/cmake/: utils.cmake
misc/scripts/: format.ps1  format.sh  tidy.ps1  tidy.sh
src/: CMakeLists.txt  app_base.hpp  glfw_opengl3_app.cpp  glfw_opengl3_app.hpp  main.cpp  options.h  options.hpp  sdl_renderer_app.cpp  sdl_renderer_app.hpp
